<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.2</version>
    <relativePath />
  </parent>
  <groupId>org.alfresco</groupId>
  <artifactId>alfresco-java-sdk</artifactId>
  <version>6.3.0-A4-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Alfresco :: Java SDK :: Parent</name>
  <description>Parent for Alfresco Java SDK</description>
  <url>https://github.com/Alfresco/${project.scm.repository}</url>
  <inceptionYear>${project.year}</inceptionYear>
  <organization>
    <name>Alfresco Software, Ltd</name>
    <url>https://www.alfresco.com</url>
  </organization>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Zoltan Palfi</name>
      <email>zoltan.palfi@alfresco.com</email>
    </developer>
    <developer>
      <name>Martin Bergljung</name>
      <email>martin.bergljung@alfresco.com</email>
    </developer>
    <developer>
      <name>Marcello Teodori</name>
      <email>marcello.teodori@alfresco.com</email>
    </developer>
    <developer>
      <name>Jose Luis Osorno</name>
      <email>joseluis.osorno@ixxus.com</email>
    </developer>
  </developers>
  <modules>
    <module>alfresco-java-event-api</module>
    <module>alfresco-acs-java-rest-api</module>
    <module>alfresco-java-rest-api-common</module>
    <module>samples</module>
    <module>integration-tests</module>
  </modules>
  <scm>
    <connection>scm:git:https://github.com/Alfresco/alfresco-java-sdk.git</connection>
    <developerConnection>scm:git:https://github.com/Alfresco/alfresco-java-sdk.git
    </developerConnection>
    <url>https://github.com/Alfresco/alfresco-java-sdk</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/Alfresco/alfresco-java-sdk/issues</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub</system>
    <url>https://github.com/${project.scm.organisation}/${project.scm.repository}/actions</url>
  </ciManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>${swagger-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-openfeign-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
      </dependency>
      <dependency>
        <groupId>org.alfresco</groupId>
        <artifactId>alfresco-java-rest-api-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.alfresco</groupId>
        <artifactId>acs-event-model</artifactId>
        <version>${acs-event-model.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <repository>
      <id>alfresco-public</id>
      <url>https://artifacts.alfresco.com/nexus/content/repositories/releases</url>
    </repository>
    <snapshotRepository>
      <id>alfresco-public-snapshots</id>
      <url>https://artifacts.alfresco.com/nexus/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <project.scm.organisation>Alfresco</project.scm.organisation>
    <project.scm.repository>alfresco-java-sdk</project.scm.repository>
    <project.year>2021</project.year>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>
    <java.release>${java.version}</java.release>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.release>${java.release}</maven.compiler.release>
    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
    <spring-cloud.version>2023.0.3</spring-cloud.version>
    <swagger-core.version>1.5.20</swagger-core.version>
    <license-maven-plugin.version>3.0</license-maven-plugin.version>
    <third-party-license-maven-plugin.version>2.0.1</third-party-license-maven-plugin.version>
    <acs-event-model.version>0.0.25</acs-event-model.version>
  </properties>
  <repositories>
    <repository>
      <id>central</id>
      <name>Central Repository</name>
      <url>https://repo.maven.apache.org/maven2</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>alfresco-public</id>
      <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
    </repository>
    <repository>
      <id>alfresco-public-snapshots</id>
      <url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>alfresco-private-repository</id>
      <url>https://artifacts.alfresco.com/nexus/content/groups/private</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <name>Central Repository</name>
      <url>https://repo.maven.apache.org/maven2</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <updatePolicy>never</updatePolicy>
      </releases>
    </pluginRepository>
    <pluginRepository>
      <id>alfresco-internal-plugin</id>
      <name>Alfresco Internal Repository</name>
      <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${license-maven-plugin.version}</version>
          <configuration>
            <inlineHeader><![CDATA[
Copyright ${project.inceptionYear}-${project.year} ${project.organization.name}.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.]]>
            </inlineHeader>
            <includes>
              <include>**/*.java</include>
            </includes>
            <mapping>
              <java>SLASHSTAR_STYLE</java>
            </mapping>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
          <configuration>
            <tagNameFormat>@{project.version}</tagNameFormat>
            <useReleaseProfile>false</useReleaseProfile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${third-party-license-maven-plugin.version}</version>
          <executions>
            <execution>
              <id>third-party-licenses</id>
              <goals>
                <goal>add-third-party</goal>
              </goals>
              <phase>generate-resources</phase>
              <configuration>
                <failOnMissing>true</failOnMissing>
                <excludedScopes>provided,test</excludedScopes>
                <excludedGroups>^(org\.alfresco|com\.alfresco|org\.activiti|org\.gytheio).*</excludedGroups>
                <failIfWarning>true</failIfWarning>
                <includedLicenses>https://raw.githubusercontent.com/Alfresco/third-party-license-overrides/master/includedLicenses.txt</includedLicenses>
                <licenseMergesUrl>https://raw.githubusercontent.com/Alfresco/third-party-license-overrides/master/licenseMerges.txt</licenseMergesUrl>
                <overrideUrl>https://raw.githubusercontent.com/Alfresco/third-party-license-overrides/master/override-THIRD-PARTY.properties</overrideUrl>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>validate-license</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
       </plugin>
    </plugins>
  </build>
</project>
